--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "element": "^0.1.4",
+    "element-ui": "^2.15.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
